# server-stats-tg-bot

./: .gitignore  Dockerfile  README.md  bot.py  df_system_stats.csv  docker-compose.yml  pyproject.toml  start.bat  system_info_api.py  utils.py
