[project]
name = "server-stats-tg-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "IvanArsenev", email = "arsenev.ivan00@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
matplotlib = "^3.10.3"
pandas = "^2.2.3"
aiogram = "^3.20.0.post0"
requests = "^2.32.3"
